--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
-
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Manrope", sans-serif;
+  font-size: 15px;
+}
 
 /*# sourceMappingURL=style.css.map */
