--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,29 +1,57 @@
 // Base # Front-end Style Guide
-
 $soft-cyan: hsl(174, 77%, 80%);
 $strong_cyan: hsl(174, 86%, 45%);
-$light-grayish-red : hsl(14, 92%, 95%);
-$light-red : hsl(15, 100%, 70%);
-$pale-blue : hsl(226, 100%, 87%);
-
-$white : hsl(0, 0%, 100%);
-$very-pale-blue : hsl(230, 100%, 99%);
+$light-grayish-red: hsl(14, 92%, 95%);
+$light-red: hsl(15, 100%, 70%);
+$pale-blue: hsl(226, 100%, 87%);
+$white: hsl(0, 0%, 100%);
+$very-pale-blue: hsl(230, 100%, 99%);
 $light-grayish-blue: hsl(224, 65%, 95%);
 $light-grayish-blue: hsl(223, 50%, 87%);
-$grayish-blue : hsl(225, 20%, 60%);
-$dark-desaturated-blue : hsl(227, 35%, 25%);
-
+$grayish-blue: hsl(225, 20%, 60%);
+$dark-desaturated-blue: hsl(227, 35%, 25%);
 // Typography
-
-$main-font : 'Manrope',
+$main-font: 'Manrope',
 sans-serif;
 $font-size: 15px;
-$font-bold : 600;
-$font-bolder : 800;
+$font-bold: 600;
+$font-bolder: 800;
 
-body{
+// Reset
+h1,
+h2,
+h3,
+h4,
+h5 {
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     font-family: $main-font;
     font-size: $font-size;
+    background-color: $very-pale-blue;
+
+}
+
+.page {
+    padding: 100px 0px;
+    background: url('images/bg-pattern.svg');
+    background-repeat: no-repeat;
+    background-origin: top;
 }
